# serializer version: 1
# name: TestEdgeCaseSnapshots.test_rotate_near_zero
  list([
    dict({
      'bbox': list([
        26,
        189,
        352,
        202,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        26,
        234,
        473,
        262,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        26,
        294,
        473,
        322,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestEdgeCaseSnapshots.test_skew_near_zero
  list([
    dict({
      'bbox': list([
        29,
        189,
        352,
        202,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        28,
        234,
        471,
        261,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        28,
        293,
        470,
        321,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestEdgeCaseSnapshots.test_small_image_rotate
  list([
    dict({
      'bbox': list([
        10,
        10,
        90,
        90,
      ]),
    }),
  ])
# ---
# name: TestPerspectiveSnapshots.test_perspective_book_curve
  list([
    dict({
      'bbox': list([
        39,
        193,
        347,
        206,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        39,
        236,
        462,
        262,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        39,
        292,
        462,
        319,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestPerspectiveSnapshots.test_perspective_camera_angle_left
  list([
    dict({
      'bbox': list([
        48,
        206,
        344,
        218,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        49,
        249,
        452,
        276,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        52,
        305,
        449,
        331,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestPerspectiveSnapshots.test_perspective_camera_angle_top
  list([
    dict({
      'bbox': list([
        65,
        171,
        336,
        182,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        60,
        211,
        442,
        237,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        56,
        268,
        446,
        295,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestPerspectiveSnapshots.test_perspective_combined
  list([
    dict({
      'bbox': list([
        45,
        188,
        345,
        200,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        44,
        230,
        457,
        257,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        43,
        287,
        458,
        314,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestPerspectiveSnapshots.test_perspective_multicolumn
  list([
    dict({
      'bbox': list([
        43,
        14,
        280,
        49,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'Column layouts are common in documents like newspapers and academic papers. Each column should be handled properly.',
    }),
    dict({
      'bbox': list([
        43,
        75,
        274,
        97,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'The transformation must preserve the relative positions of text across all columns.',
    }),
  ])
# ---
# name: TestRotateSnapshots.test_rotate_multicolumn
  list([
    dict({
      'bbox': list([
        43,
        21,
        270,
        71,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'Column layouts are common in documents like newspapers and academic papers. Each column should be handled properly.',
    }),
    dict({
      'bbox': list([
        47,
        80,
        267,
        118,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'The transformation must preserve the relative positions of text across all columns.',
    }),
  ])
# ---
# name: TestRotateSnapshots.test_rotate_small_angle_negative
  list([
    dict({
      'bbox': list([
        39,
        181,
        351,
        209,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        36,
        224,
        464,
        272,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        33,
        282,
        461,
        329,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestRotateSnapshots.test_rotate_small_angle_positive
  list([
    dict({
      'bbox': list([
        35,
        187,
        343,
        218,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        38,
        223,
        461,
        275,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        41,
        279,
        464,
        331,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestSkewSnapshots.test_skew_multicolumn
  list([
    dict({
      'bbox': list([
        27,
        81,
        255,
        103,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'Column layouts are common in documents like newspapers and academic papers. Each column should be handled properly.',
    }),
    dict({
      'bbox': list([
        37,
        120,
        257,
        134,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'The transformation must preserve the relative positions of text across all columns.',
    }),
  ])
# ---
# name: TestSkewSnapshots.test_skew_negative_dx
  list([
    dict({
      'bbox': list([
        43,
        196,
        336,
        207,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        48,
        236,
        451,
        261,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        55,
        290,
        457,
        315,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestSkewSnapshots.test_skew_positive_dx
  list([
    dict({
      'bbox': list([
        62,
        198,
        348,
        209,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        55,
        237,
        447,
        261,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        47,
        289,
        440,
        313,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestSkewSnapshots.test_skew_small_dx
  list([
    dict({
      'bbox': list([
        39,
        192,
        350,
        204,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        36,
        235,
        464,
        261,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        33,
        292,
        461,
        318,
      ]),
      'column': 0,
      'paragraph_index': 4,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
